force-app/main/default/objects/Affiliation__c/fields/Horse__c.field-meta.xml
<CustomField>
    <fullName>Horse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Horse</label>
    <referenceTo>Horse__c</referenceTo>
    <relationshipLabel>Related Accounts</relationshipLabel>
    <relationshipName>Related_Horses</relationshipName>
    <type>Lookup</type>
</CustomField>