force-app/main/default/objects/Affiliation__c/fields/Horse_Name__c.field-meta.xml
<CustomField>
    <fullName>Horse_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;Horse__r.Id, Horse__r.Name__c)</formula>
    <label>Horse Name</label>
    <type>Text</type>
</CustomField>