force-app/main/default/objects/Affiliation__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>Horse__r.Name__c</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>