force-app/main/default/objects/Affiliation__c/fields/Nominated_to_Compete__c.field-meta.xml
<CustomField>
    <fullName>Nominated_to_Compete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This indicates that this Horse has been selected for participation in competition(s) by the Affiliated Contact.</inlineHelpText>
    <label>Nominated to Compete</label>
    <type>Checkbox</type>
</CustomField>