force-app/main/default/objects/Affiliation__c/fields/Registration_No__c.field-meta.xml
<CustomField>
    <fullName>Registration_No__c</fullName>
    <formula>Horse__r.Registration_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration No</label>
    <type>Text</type>
</CustomField>