force-app/main/default/objects/Affiliation__c/fields/Slot__c.field-meta.xml
<CustomField>
    <fullName>Slot__c</fullName>
    <label>Slot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Farm</fullName>
                <default>true</default>
                <label>Farm</label>
            </value>
            <value>
                <fullName>Station</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>